[tool.poetry]
name = "drmuzik-bot"
version = "0.1.0"
description = "Telegram Music Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# Proje modu: Projenin paket olarak kurulmasını engeller.
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.12" 
python-telegram-bot = "^20.7" 
yt-dlp = "^2024.1.25"
requests = "^2.31.0"
# HATA DÜZELTMESİ: Async/Eşzamansız görünümler için [async] ek paketini dahil ediyoruz.
flask = {extras = ["async"], version = "^3.0.0"} 
ffmpeg-python = "^0.2.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
